bugfix (overlaps)

--- a/style.css
+++ b/style.css
@@ -62,12 +62,6 @@ body {
   grid-row-end: 6;
 }
 .six {
-  grid-column-start: 8;
-  grid-column-end: 10;
-  grid-row-start: 2;
-  grid-row-end: 6;
-}
-.seven {
   grid-column-start: 2;
   grid-column-end: 5;
   grid-row-start: 8;
